[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probe-tool"
version = "0.1.0"
description = "A comprehensive multi-OS penetration testing CLI for CTF and security learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Efe Borazan" }]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[http2]>=0.25.0",
    "dnspython>=2.4.0",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "python-whois>=0.9.0",
    "paramiko>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
probe = "probe.cli:app_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
probe = ["templates/*.html", "wordlists/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
